# squidcuber

./: .gitignore  README.md  cmd.py  control.py  ev3.py  explore.py  main.py  scan.py  scan1.py  setup.pkl  setup.py  setup2.pkl  solve.py  test.py  train.py  turn.py  turn.times
scan/: CMakeLists.txt  __init__.py  main.cpp  match.cpp  match.h  scan  scan.cpp  scan.h  scan.py  scan.rects  setup.py  train.py
